# polymind-trading-bot

./: .env.example  .gitignore  ARCHITECTURE.md  DOCS.txt  LICENSE  Polymind.prd  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
bot-service/: Dockerfile  discovered_wallets.json  fly.toml  main.py  requirements.txt  wallet_scraper.py
config/: default.yaml  example.env
dashboard/: .env.example  Dockerfile  fly.toml  package-lock.json  package.json
dashboard/src/: middleware.ts
docs/plans/: 2026-01-09-dashboard-redesign.md  2026-01-09-kalshi-arbitrage-design.md  2026-01-09-kalshi-arbitrage-implementation.md  2026-01-09-polymind-design.md  2026-01-09-polymind-phase1-implementation.md  2026-01-09-polymind-phase2-implementation.md  2026-01-09-polymind-phase3-implementation.md  2026-01-09-polymind-phase4-implementation.md  2026-01-09-polymind-phase5-implementation.md  2026-01-09-pre-live-complete-design.md  2026-01-09-pre-live-implementation.md  2026-01-10-multi-user-platform-design.md  2026-01-12-ai-sell-strategy-design.md
migrations/: env.py
migrations/versions/: a1b2c3d4e5f6_add_intelligence_tables.py  db85214b9e26_initial_schema.py
scripts/: wait-for-db.sh
src/polymind/: __init__.py  runner.py
supabase/migrations/: 20260111_add_buy_sell_tracking.sql  20260112_add_whale_trade_id.sql  20260113_fix_wallet_rls.sql
tests/: __init__.py  test_runner.py
tests/config/: test_settings.py
tests/data/: test_models.py  test_queue.py
tests/integration/: test_arbitrage_flow.py  test_brain.py  (+6 more)
(+166 files in other folders)
